<resources>
    <string name="app_name">BASI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_app_item1">Projektverwaltung</string>
    <string name="kamera_dir">Name: </string>
    <string name="kamera_tag">Tag: </string>
    <string name="kamera_tag_onoff">ON/OFF</string>
    <string name="start">Speicherort: </string>
    <string name="kamera_label_date">Datum:</string>
    <string name="kamera_label_media">Medien:</string>
    <string name="kamera_sub_dir_add">Hinzufügen</string>
    <string name="kamera_sub_dir_add_new">Neu</string>
    <string name="kamera_sub_dir_add_clone">Unterverzeichnis</string>
    <string name="kamera_sub_dir_update">Bearbeiten</string>
    <string name="kamera_sub_dir_delet">Löschen</string>
    <string name="dialog_start_game">Starten</string>
    <string name="cancel">BEENDEN</string>
    <string name="abort">Abbrechen</string>
    <string name="dir_name">Ortnername:</string>
    <string name="add_title_dir_name">Neuer Ordner Anlegen</string>
    <string name="add_sub_dir_title_dir_name">Unterordner Anlegen</string>
    <string name="modify_title_dir_name">Ordner Bearbeiten</string>
    <string name="emtpy"></string>
    <string name="ok">OK</string>
    <string name="settings_Projekt_name">Name:</string>
    <string name="settings_Projekt_nr">Nr:</string>
    <string name="settings_Projekt_path">Ordner:</string>
    <string name="settings_Projekt_create_new_dialog_title">Neues Projekt Anlegen:</string>
    <string name="settings_Projekt_bilder_path">Pfad: (default:root)</string>
    <string name="settings_Projekt_bilder_backup_banner">Backup</string>
    <string name="settings_Projekt_bilder_backup_create">Erstellen</string>
    <string name="settings_Projekt_bilder_backup_restor">Wiederherstellen</string>
    <string name="settings_Projekt_dialog_title">Projekte verwalten</string>
    <string name="settings_Projekt_dialog_current_selected_title">Aktuelles Projekt</string>
    <string name="settings_Projekt_dialog_selected_title">Projekt Auswählen</string>
    <string name="settings_Projekt_dialog_create_projekt">Neues Projekt anlegen</string>
    <string name="date_label">"Datum "</string>
    <string name="note">"Notiz/Bemerkungen: "</string>
    <string name="save">"Speichern"</string>
    <string name="empty">""</string>
    <string name="reset">Reset</string>
    <string name="gps">"GPS"</string>
    <string name="projekt_log">Log Anzeigen</string>
    <string name="proj_name">"Name/Nr"</string>
    <string name="proj_created">"Erstellt am:"</string>
    <string name="proj_location">"Ort:"</string>
    <string name="todo">TODO</string>
    <string name="settings_title">Projekte</string>
    <string name="settings_f1">Neues Projekt anlegen: </string>
    <string name="title_activity_settings">Projekte</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="element_text">Test</string>
    <string name="projekt_name">Projektname:</string>
    <string name="title_activity_custom">Custom</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_kat">Kategorie</string>
    <string name="reset_note">Notiz</string>
    <string name="reset_kat">Kategorie</string>
    <string name="reset_all">Alles</string>
    <string name="fav_global">Global</string>
    <string name="Maschinen_label">Maschine:</string>
    <string name="Maschinen_label_stundne">Zählerstand:</string>
    <string name="log_search_filter_dialog_title">Suchfilter</string>
    <string name="log_search_filter_text_label">Suchtext</string>
    <string name="log_search_filter_flags_label">Marker</string>
    <string name="log_label_filter_date">Datum</string>
    <string name="log_label_filter_date_vonbis">bis</string>
    <string name="log_label_filter_checked">erledigt</string>
    <string name="log_label_filter_true">erledigt</string>
    <string name="log_label_filter_false">unerledigt</string>
    <string name="log_label_filter_fav">Favorit</string>
    <string name="log_actions_delet">Löschen</string>
    <string name="log_actions_delet_all">Alle Einträge inklusive Favoriten</string>
    <string name="log_actions_delet_all_exept_fav_flags">Alle Ausser Favoriten</string>
    <string name="log_actions_delet_all_check_true">Erledigte</string>
    <string name="log_actions_delet_all_search">Suchergebnisse</string>
    <string name="log_actions_upload">Sync</string>
    <string name="log_actions_upload_all">Alle Einträge des Projektes</string>
    <string name="log_actions_upload_all_check_true">Erledigte</string>
    <string name="log_actions_upload_all_check_false">Unerledigte</string>
    <string name="log_actions_upload_all_fav_true">Markierte</string>
    <string name="log_actionsupload_all_search">Suchergebnisse</string>
    <string name="log_title">Log Einträge</string>
    <string name="m_conf_masch_list_name">Name:</string>
    <string name="m_conf_masch_list_nr">NR:</string>
    <string name="m_conf_masch_list_category">Kategorie:</string>
    <string name="m_conf_masch_list_h_curr">Zählerstand:</string>
    <string name="m_conf_masch_list_note">Notiz/Bemerkung:</string>
    <string name="m_conf_masch_list_swichonoff">ON/OFF:</string>
    <string name="m_conf_masch_list_addbild">Bild:</string>
    <string name="m_conf_masch_countertyp_1">Zählerstand</string>
    <string name="m_conf_masch_countertyp_2">Addition</string>
    <string name="m_info_name">Name:</string>
    <string name="m_info_nr">Nr:</string>
    <string name="m_info_created">Erstellt:</string>
    <string name="m_info_category">Kategorie:</string>
    <string name="m_info_note">Notiz:</string>
    <string name="m_info_counter">Zählerstand:</string>
    <string name="m_info_entry_counter">Anzahl Einträge:</string>
    <string name="m_info_entry_last">Letzter Eintrag:</string>
    <string name="m_database_layout1_date">Datum:</string>
    <string name="m_database_layout1_time">Uhrzeit:</string>
    <string name="m_conf_masch_list_dummy_value">None</string>
    <string name="summary_material_label">Material:</string>
    <string name="summary_material_value_label">Wert:</string>
    <string name="summary_material_comment_label">Bemerkung:</string>
    <string name="title_activity_log_conf_fav">log_conf_fav</string>
    <string name="log_fav_modify_title">Name ändern</string>
    <string name="title_activity_log_data">Log_data</string>
    <string name="date_sample">01.01.2022</string>
    <string name="time_sample">13:00</string>
    <string name="kategorie_sample">Tätikeit Gartenbau</string>
    <string name="title_activity_mconf_maschine">m_conf_maschine</string>
    <string name="share_pdf">.PDF</string>
    <string name="share_backup">Backup</string>
    <string name="share_csv">.CSV</string>
    <string name="share_txt">.TXT</string>
    <string name="share_cloud">Sync</string>
    <string name="im_port">Import</string>
    <string name="ex_port">Export</string>
    <string name="delet_all_entrys">Alle Einträge löschen </string>
    <string name="Dummydata">Generiere Dummy Daten</string>
    <string name="menu_new_maschine">Neue Maschine</string>
    <string name="menu_maschine_export">Exportieren</string>
    <string name="menu_maschine_import">Import</string>
    <string name="material_projekt_banner">Projekt</string>
    <string name="material_datum_ls_banner">Datum/LS Nr</string>
    <string name="material_zulieferer_banner">Zulieferer:</string>
    <string name="material_zulieferer_connfig_banner">Zulieferer Bearbeiten</string>
    <string name="material_zulieferer_update_alert_text">Achtung: Vorhandene Medien (Bilder,Pdfs) werden beim ändern es Namens NICHT automatisch angepasst!\n\n => Sie müssen Manuel angepasst werden!</string>
    <string name="material_add_zulieferer_banner">Zulieferer Hinzufügen</string>
    <string name="material_backup_zulieferer_banner">Datenbank Backups</string>
    <string name="material_backup_create_zulieferer_banner">Erstellen</string>
    <string name="material_backup_restore_zulieferer_banner">Wiederherstellen</string>
    <string name="material_wievie_was_lbanner">Artikel/Menge/Einheit</string>
    <string name="material_einheit_lbanner">Einheit:</string>
    <string name="material_medien_banner">Medien/Dateien</string>
    <string name="LSnr_label">LS-Nr:</string>
    <string name="Proj_label_sample">Ceppi Areal Lonza</string>
    <string name="Artikel_label">Artikel:</string>
    <string name="Menge_label">Menge:</string>
    <string name="Medien_switch_label">Speichern ON/OFF</string>
    <string name="Projektname_add_dialog_label">Projektname: </string>
    <string name="Projektdir_add__dialog_label">Projektverzeichniss: </string>
    <string name="Proj_nr_banner">Projekt ID:</string>
    <string name="matieral_zulieferen_banner">Lieferanten Name:</string>
    <string name="matieral_date_label">Datum:</string>
    <string name="matieral_lsnr_label">Lieferschein Nr:</string>
    <string name="matieral_note_label">Bemerkungen:</string>
    <string name="matieral_artikel_label">Artikel:</string>
    <string name="artikel_config_dialog_update_label">Artikel Bearbeiten</string>
    <string name="artikel_config_dialog_add_label">Artikel Hinzufügen</string>
    <string name="artikel_config_dialog_backup_label">Datenbank Backups:</string>
    <string name="artikel_config_dialog_backup_create">Erstellen</string>
    <string name="artikel_config_dialog_backup_restore">Wiederherstellen</string>
    <string name="personal_label">Personalstamm</string>
    <string name="personal_name_label">Name:</string>
    <string name="favorite_strings_connfig_banner">Gespeicherte Favoriten Bearbeiten</string>
    <string name="favorite_strings_connfig_add_banner">Neue Favoriten Hinzufügen</string>
    <string name="favorite_strings_update_banner">Wert:</string>
    <string name="favorite_strings_global_banner">Global</string>
    <string name="favorite_strings_lokal_banner">Lokal</string>
    <string name="list_name_label">Name:</string>
    <string-array name="summary_typ_array">
        <item>Teilprojekt</item>
        <item>Gesamtprojekt</item>
    </string-array>
    <string-array name="m_categorys">
        <item>None</item>
        <item>Bagger</item>
        <item>Radlader</item>
        <item>Dumper</item>
        <item>Hukys</item>
        <item>Verdichtungsgeräte</item>
        <item>Kleinmaschinen</item>
        <item>Autos</item>
        <item>Anhänger</item>
        <item>Mietmaschine</item>
    </string-array>
    <string-array name="einheiten_array">
        <item>m3</item>
        <item>m2</item>
        <item>t</item>
        <item>kg</item>
        <item>g</item>
        <item>Liter</item>
        <item>ml</item>
        <item>m</item>
        <item>Stück</item>
        <item>Pack</item>
        <item>Bund</item>
        <item>km</item>
        <item>cm</item>
        <item>mm</item>
        <item>h</item>
        <item>Big Bag</item>

    </string-array>
    <string name="title_activity_material_log">material_log_activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>