<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/delet"
            android:title="Löschen" >
        <menu>
            <item android:id="@+id/delet_all_entrys"
                android:title="@string/log_actions_delet_all" > </item>
            <item
                android:id="@+id/delet_all_exept_fav_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/log_actions_delet_all_exept_fav_flags" />
            <item
                android:id="@+id/delet_check_true"
                android:title="@string/log_actions_delet_all_check_true"></item>
        </menu>

        </item>
    <item android:id="@+id/sync"
        android:title="Synchronisieren" >
        <menu>
            <item android:id="@+id/sync_Update_form_server"
                android:title="Alle Daten Aktualisieren vom Server" > </item>

            <item android:id="@+id/sync_Update_to_server"
                android:title="Alle Daten Aktualisieren zum Server " > </item>

            <item android:id="@+id/sync_db_settings"
                android:title="Sync Einstellungen" > </item>
            <item
                android:id="@+id/get_dummy_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="Generiere Dummys" />
        </menu>
        <!-- "file" submenu -->
    </item>
</menu>
