<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:padding="5dp"
                android:text="@string/favorite_strings_update_banner" />

            <EditText
                android:id="@+id/editTextText2_favorite_string_update_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp"
                android:text="@string/empty" />

            <ImageButton
                android:id="@+id/imageButton_favorite_string_update_reset_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:background="#00FFFFFF"
                android:padding="5dp"

                app:srcCompat="@drawable/ic_baseline_cancel_24" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/global_lokal_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <RadioButton
                android:id="@+id/radioButton_global"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/fav_global" />

            <RadioButton
                android:id="@+id/radioButton_lokal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/favorite_strings_lokal_banner" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>