<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView49"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:background="@color/white"
        android:padding="5dp"
        android:text="@string/Projektname_add_dialog_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/proj_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="5dp"
        android:text="@string/Proj_nr_banner"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/proj_nr"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="text"
            android:padding="5dp"
            android:text="@string/empty" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView51"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:background="@color/white"
        android:padding="5dp"
        android:text="@string/Projektdir_add__dialog_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="0dp">

        <EditText
            android:id="@+id/proj_path"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:text="@string/empty" />

        <ImageButton
            android:id="@+id/imageButton45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0"
            android:background="#00FFFFFF"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_baseline_folder_open_24" />
    </LinearLayout>

</LinearLayout>